cmake_minimum_required(VERSION 2.6)
project(slot_game)
include_directories(.)
add_definitions(-DASIO_STANDALONE -DBUFF_SIZE=256 -DDEFAULT_PORT=6969)
set(libraries common)
if(UNIX)
    set(CMAKE_VERBOSE_MAKEFILE ON)
    set(CMAKE_CXX_FLAGS "-std=c++14 -Wall -Wextra -pedantic -g -O0")
    set(libraries ${libraries} pthread)
endif()
add_library(common common.cpp common.hpp)
add_executable(client client.cpp)
target_link_libraries(client ${libraries})
add_executable(server server.cpp)
target_link_libraries(server ${libraries})
